[gd_scene load_steps=12 format=2]

[ext_resource path="res://Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Saws.tscn" type="PackedScene" id=3]
[ext_resource path="res://InGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://InitialPlatform.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/dano.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/musica_fundo1.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/ui/videotype.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://JumpMsg.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0.301961, 0.227451, 0.188235, 1 )
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )
Platform = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -25.0
margin_top = -23.0
margin_right = 738.0
margin_bottom = 1302.0
color = Color( 0.521569, 0.901961, 1, 1 )

[node name="Saws" parent="." instance=ExtResource( 3 )]
z_index = 10

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 371, 605 )
scale = Vector2( 1.83871, 1.83871 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="InGame" parent="." instance=ExtResource( 4 )]

[node name="WinTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="InitPlatform" parent="." instance=ExtResource( 6 )]
position = Vector2( 368, 690 )

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.866

[node name="BackgroundSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
autoplay = true

[node name="JumpMsg" type="Label" parent="."]
margin_left = 267.0
margin_top = 796.0
margin_right = 475.0
margin_bottom = 875.0
custom_fonts/font = SubResource( 1 )
text = "Jump!"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="JumpMsg"]
wait_time = 0.3
autostart = true

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="got_hit" from="Player" to="." method="_on_Player_got_hit"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="destroyed" from="InitPlatform" to="JumpMsg" method="_on_InitPlatform_destroyed"]
[connection signal="timeout" from="JumpMsg/Timer" to="JumpMsg" method="_on_Timer_timeout"]
